@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToDTOMapper.puml
!include LongIdMapper.puml
!include StringNameMapper.puml
!include AmountMapper.puml
!include MeasureUnitToMeasureUnitDTOMapper.puml
!include LongVersionMapper.puml

interface IngredientToIngredientDTOMapper extends Mapper, ToDTOMapper {
    + void map(Ingredient source, IngredientDTO target)
    + IngredientDTO mapToDTO(Ingredient ingredient)
}

class SimpleIngredientToIngredientDTOMapper implements IngredientToIngredientDTOMapper {
    - LongIdMapper longIdMapper
    - StringNameMapper stringNameMapper
    - AmountMapper amountMapper
    - MeasureUnitToMeasureUnitDTOMapper measureUnitToMeasureUnitDTOMapper
    - LongVersionMapper longVersionMapper

    + IngredientDTO mapToDTO(Ingredient ingredient)
    + void map(Ingredient ingredient, IngredientDTO ingredientDTO)
    - void mapId(Ingredient ingredient, IngredientDTO ingredientDTO)
    - void mapName(Ingredient ingredient, IngredientDTO ingredientDTO)
    - void mapAmount(Ingredient ingredient, IngredientDTO ingredientDTO)
    - void mapMeasureUnitToMeasureUnitDTO(Ingredient ingredient, IngredientDTO ingredientDTO)
    - void mapVersion(Ingredient ingredient, IngredientDTO ingredientDTO)
}

SimpleIngredientToIngredientDTOMapper --> LongIdMapper
SimpleIngredientToIngredientDTOMapper --> StringNameMapper
SimpleIngredientToIngredientDTOMapper --> AmountMapper
SimpleIngredientToIngredientDTOMapper --> MeasureUnitToMeasureUnitDTOMapper
SimpleIngredientToIngredientDTOMapper --> LongVersionMapper
@enduml